the section was prepared

--- a/index.html
+++ b/index.html
@@ -32,5 +32,18 @@
 			<img src="./images/uchburchak.png" alt="icon" class="uch">
 		</div>
 	</nav>
+	<section class="health">
+		<div class="container">
+			<h1 class="health__title">Be Attentive To Your Health</h1>
+			<p class="health__text">A wise doctor does not mutter incantations over a sore that needs the kinefe. The patiend is not likely to recover who makes the doctor his heir the best doctors in the world.</p>
+			<div class="find">
+				<p class="find-subtext">Find Your Service</p>
+				<button class="find-button">Book Now</button>
+			</div>
+			<img src="./images/he1.png" alt="icon" class="pos">
+			<img src="./images/he1.png" alt="icon" class="pos2">
+			<img src="./images/he3.png" alt="icon" class="pos3">
+		</div>
+	</section>
 </body>
 </html>
