--- a/index.html
+++ b/index.html
@@ -45,5 +45,19 @@
 			<img src="./images/he3.png" alt="icon" class="pos3">
 		</div>
 	</section>
+	<section class="children">
+		<div class="container">
+			<div class="children__photo">
+				<img src="./images/foto.png" alt="icon" class="children__photo-imge">
+				<img src="./images/tort.png" alt="icon" class="children__photo-imge2">
+			</div>
+			<div class="children__content">
+				<h1 class="children__content-title">Children's(Pediatrics) Center</h1>
+				<p class="children__content-text">Lorem ipsum dolor sit amet consectetur adipisicing, elit. A iste porro illo veritatis accusamus animi ullam delectus velit excepturi rerum, nesciunt officiis neque dolor ea. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, doloremque ad, similique aut necessitatibus in.</p>
+				<a href="#" class="children__content-link">How It Works</a>
+				<img src="./images/nuqta.png" alt="icon" class="nuqta">
+			</div>
+		</div>
+	</section>
 </body>
 </html>
