--- a/index.html
+++ b/index.html
@@ -58,6 +58,34 @@
 				<img src="./images/nuqta.png" alt="icon" class="nuqta">
 			</div>
 		</div>
+		<div class="container vvv">
+			<div class="children__photo">
+				<img src="./images/foto2.png" alt="icon" class="children__photo-imge">
+				<img src="./images/tort.png" alt="icon" class="children__photo-imge2 bbb">
+			</div>
+			<div class="children__content">
+				<h1 class="children__content-title ttt">Haalth Screening Center(Check-Up)</h1>
+				<p class="children__content-text">Lorem ipsum dolor sit amet consectetur adipisicing, elit. A iste porro illo veritatis accusamus animi ullam delectus velit excepturi rerum, nesciunt officiis neque dolor ea. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, doloremque ad, similique aut necessitatibus in.</p>
+				<a href="#" class="children__content-link">How It Works</a>
+				<img src="./images/nuqta.png" alt="icon" class="nuqta nnn">
+			</div>
+		</div>
 	</section>
+	<h1 class="doc-title">Our Doctors are ready</h1>
+	<p class="doc-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad praesentium sunt nihil nemo magnam non. lorem, ipsum.</p>
+	<main class="main">
+		<div class="container">
+			<div class="main__photo">
+				<img src="./images/light.png" alt="image" class="main__photo-image">
+				<div class="box">
+					<h1 class="main__box-title">Dr.John Smith</h1>
+					<h2 class="main__box-titlll">General Surgery</h2>
+					<h3 class="mbt">(MBBS I RMK) (FCPS I OMC)</h3>
+					<p class="main__box-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla animi dolorum, earum ipsa illo neque nam sit. Magnam earum alias natus quos ad, et, eveniet quasi, illo omnis ratione, doloremque. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+					<a href="#" class="main__box-link">Book Now</a>
+				</div>
+			</div>
+		</div>
+	</main>
 </body>
 </html>
