created John Bergman

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<link rel="stylesheet" href="Responsive.css">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -81,6 +82,30 @@
 					<h1 class="main__box-title">Dr.John Smith</h1>
 					<h2 class="main__box-titlll">General Surgery</h2>
 					<h3 class="mbt">(MBBS I RMK) (FCPS I OMC)</h3>
+					<p class="main__box-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla animi dolorum, earum ipsa illo neque nam sit. Magnam earum alias natus quos ad, et, eveniet quasi, illo omnis ratione, doloremque. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+					<a href="#" class="main__box-link">Book Now</a>
+				</div>
+			</div>
+		</div>
+		<div class="container">
+			<div class="main__photo fff">
+				<div class="box">
+					<h1 class="main__box-title right">Dr.jevi Shetty</h1>
+					<h2 class="main__box-titlll right">Medivine Expert</h2>
+					<h3 class="mbt right">(MBBS I DMC) (FRCP\S I TLMC)</h3>
+					<p class="main__box-text rig">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla animi dolorum, earum ipsa illo neque nam sit. Magnam earum alias natus quos ad, et, eveniet quasi, illo omnis ratione, doloremque. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+					<a href="#" class="main__box-link lig">Book Now</a>
+				</div>
+				<img src="./images/light.png" alt="image" class="main__photo-image">
+			</div>
+		</div>
+		<div class="container qqq">
+			<div class="main__photo">
+				<img src="./images/light.png" alt="image" class="main__photo-image">
+				<div class="box">
+					<h1 class="main__box-title">Dr.John Bergman</h1>
+					<h2 class="main__box-titlll">Neurologist Expert</h2>
+					<h3 class="mbt">(MBBS I OMC) (FCPS I KM)</h3>
 					<p class="main__box-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla animi dolorum, earum ipsa illo neque nam sit. Magnam earum alias natus quos ad, et, eveniet quasi, illo omnis ratione, doloremque. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 					<a href="#" class="main__box-link">Book Now</a>
 				</div>
